--- a/css/main.css
+++ b/css/main.css
@@ -41,3 +41,21 @@ h4 {
     font-size: 3rem;
     color: #ffffff;
 }
+
+@media screen and (max-width: 600px) {
+    body {
+        text-align: center;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    h4, p {
+        font-size: 1.5rem;
+    }
+
+    .quoteDisplay {
+        padding: 50px 50px;
+    }
+}
