--- a/css/main.css
+++ b/css/main.css
@@ -37,9 +37,15 @@ h4 {
     padding: 100px 100px;
 }
 
-.quoteDisplay P {
+#Quote {
+    font-weight: 900;
+    color: #fff;
     font-size: 3rem;
-    color: #ffffff;
+}
+
+#Author {
+    color: #fff;
+    font-size: .9rem;
 }
 
 @media screen and (max-width: 600px) {
